# tactvis

./: .gitignore  CMakeLists.txt  README.md  setup.sh
include/: camera.h  entity.h  entity_manager.h  hud.h  renderer.h  sensor_receiver.h  shader.h  terrain.h
shaders/: entity.frag  terrain.frag  terrain.vert  threat.frag  threat.vert
sim/: sensor_sim.py
src/: camera.cpp  entity_manager.cpp  hud.cpp  main.cpp  renderer.cpp  sensor_receiver.cpp  shader.cpp  terrain.cpp
